config/kubernetes/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peoplefinder
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: peoplefinder
  template:
    metadata:
      labels:
        app: peoplefinder
    spec:
      serviceAccountName: peoplefinder
      containers:
        - name: webapp
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder:development.latest
          ports:
            - containerPort: 3000
          command: ["./config/docker/entrypoint-webapp.sh"]
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
        - name: jobs
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder:development.latest
          ports:
            - containerPort: 3000
          command: ["./config/docker/entrypoint-jobs.sh"]
        - name: metrics
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder:development.latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9394
          command: ['sh', '-c', 'bundle exec prometheus_exporter --bind 0.0.0.0']
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9394
            initialDelaySeconds: 10
            periodSeconds: 60
