config/kubernetes/development/service-es-transport.yaml
apiVersion: v1
kind: Service
metadata:
  name: peoplefinder-es-transport
  labels:
    app: peoplefinder-es-transport
spec:
  ports:
  - port: 9300
    name: transport
    targetPort: 9300
  selector:
    app: peoplefinder-es
