config/kubernetes/development/ingress-live.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: peoplefinder-ingress
  namespace: peoplefinder-development
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: peoplefinder-ingress-peoplefinder-development-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
    - hosts:
        - development.peoplefinder.service.gov.uk
      secretName: peoplefinder-certificate
  rules:
    - host: development.peoplefinder.service.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: peoplefinder-service
              servicePort: 3000
